# source-span

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
examples/: fib.txt  formatting.rs  formatting_challenge.rs  highlights.rs  lexing.rs
src/: buffer.rs  fmt.rs  layout.rs  lazy.rs  lib.rs  loc.rs  metrics.rs  position.rs
src/buffer/: lazy.rs  mod.rs
