[package]
name = "source-span"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["parsing"]
keywords = ["file", "span", "format", "display"]
description = "Source file fragment location and display utilities."
repository = "https://github.com/timothee-haudebourg/source-span"
documentation = "https://docs.rs/source-span"
license = "MIT/Apache-2.0"

[dev-dependencies]
utf8-decode = "*"
