[package]
name = "source-span"
version = "2.5.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["parsing"]
keywords = ["source", "code", "map", "span"]
description = "Source code mapping and display utilities."
repository = "https://github.com/timothee-haudebourg/source-span"
documentation = "https://docs.rs/source-span"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = ["colors"]
colors = ["termion"]

[dependencies]
termion = { version = "1.5", optional = true }

[dev-dependencies]
utf8-decode = "1.0"
